mobile-menu horizontal scroll fix

--- a/#src/components/menu/menu.scss
+++ b/#src/components/menu/menu.scss
@@ -445,3 +445,295 @@
     transition: all 0.3s ease 0s;
   }
 }
+
+.burger {
+  position: relative;
+  width: 40px;
+  height: 28px;
+
+  span {
+    display: block;
+    width: 40px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #d0d0d0;
+    transition: all 0.3s;
+    opacity: 1;
+  }
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #d0d0d0;
+    transition: all 0.3s;
+  }
+
+  &::after {
+    top: auto;
+    bottom: 0;
+  }
+
+
+  &.js-to-cross {
+
+    span {
+      transform: scale(0);
+      opacity: 0;
+      background-color: $white;
+    }
+
+    &::before {
+      top: 50%;
+      width: 50%;
+      transform: rotate(-45deg) translate(10px, 1px);
+      background-color: $white;
+    }
+
+    &::after {
+      top: 50%;
+      bottom: auto;
+      width: 50%;
+      transform: rotate(45deg) translate(9px, -2px);
+      background-color: $white;
+
+    }
+  }
+}
+
+.mobile-menu {
+  display: none;
+  width: 65px;
+  height: 61px;
+
+  @media (max-width: 600px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__content {
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+    top: 61px;
+    right: 0;
+    left: 0;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+    background-color: $grey;
+    transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    transform: translateX(100%);
+
+    &.js-opened {
+      transform: translateX(0);
+
+      .mobile-menu__wrapper::before {
+        transform: rotate(15deg) scale(0.8) translateY(0);
+        opacity: 0.1;
+      }
+
+      .mobile-menu__list--main > li {
+        transform: translateX(0);
+        opacity: 1;
+
+        @for $i from 1 to 8 {
+          &:nth-child(#{$i}) {
+            transition-delay: $i * 0.12s;
+          }
+        }
+      }
+    }
+  }
+
+  &__wrapper {
+    position: relative;
+    overflow-x: hidden;
+
+
+    &::before {
+      content: "";
+      position: absolute;
+      max-width: 100%;
+      width: 100%;
+      height: 100%;
+      background-image: url('../images/icons/big-m.png');
+      background-position: left;
+      background-repeat: no-repeat;
+      background-size: contain;
+      bottom: -20%;
+      left: -10%;
+      transition: all 0.3s ease 0s;
+      transform: rotate(15deg) scale(0.8) translateY(20%);
+      opacity: 0;
+      transition-delay: 0.6s;
+    }
+  }
+
+  &__list {
+
+    &--dropdown {
+      padding: 5px 0 0;
+      height: 0;
+      transform: translateX(80px);
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+      overflow: hidden;
+
+      li a {
+        //border-bottom: 1px solid $white;
+      }
+
+      &.js-opened {
+        overflow: visible;
+        height: auto;
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(0);
+        border-right: 3px solid $white;
+      }
+    }
+
+    &--main {
+
+      > li {
+        display: block;
+        padding: 10px 0;
+        text-align: right;
+        opacity: 0;
+        transform: translateX(40px);
+        font-weight: 700;
+        font-size: 18px;
+        transition: all 0.3s;
+      }
+    }
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: $white;
+    //border-bottom: 2px solid $white;
+
+    .cart {
+      background: none;
+
+      &__icon path {
+        fill: $mainColor-light
+      }
+
+      &__count {
+        background-color: $accent;
+        color: $white;
+      }
+    }
+  }
+
+  &__address {
+    flex: 0 0 45px;
+    margin: 0 40px 0 0;
+    height: 45px;
+    background: url('../images/icons/map-marker.svg') center no-repeat;
+  }
+
+  &__phone {
+    display: none;
+    flex: 0 0 45px;
+    margin: 0 40px 0 0;
+    height: 45px;
+    background: url('../images/icons/smartphone.svg') center no-repeat;
+
+    @media (max-width: 400px) {
+      display: block;
+    }
+  }
+
+  &__body {
+    padding: 0 20px 0 0;
+    font-size: 16px;
+  }
+
+  &__item {
+    display: block;
+    text-align: right;
+  }
+
+  &__dropdown-box {
+    .mobile-menu__link {
+      padding: 11px 21px;
+      font-weight: 400;
+      font-size: 14px;
+    }
+  }
+
+  &__dropdown-btn {
+    position: relative;
+    display: inline-block;
+    border-bottom: 3px solid transparent;
+    font-weight: 700;
+    transition: all 0.3s;
+    padding: 0 0 0 20px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 7px;
+      width: 7px;
+      height: 6px;
+      transform: rotate(0) scale(1.3);
+      background: url('../images/icons/chevron-down-black.svg') center no-repeat;
+      transition: all 0.3s ease 0s;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -7px;
+      right: 0;
+      width: 200px;
+      height: 3px;
+      background-color: $white;
+      opacity: 0;
+
+      transition: all 0.2s;
+    }
+
+    &.js-active {
+      &::before {
+        transform: rotate(180deg) scale(1.3);
+      }
+
+      &::after {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+  }
+
+  &__link {
+    display: block;
+    padding: 10px 0;
+    //border-bottom: 1px solid $white;
+  }
+
+  .os-host-resize-disabled.os-host-scrollbar-horizontal-hidden>.os-scrollbar-vertical {
+    top: -4px;
+    bottom: -4px;
+    right: -8px;
+  }
+
+  .os-scrollbar-track {
+    width: 6px;
+    background-color: $accent;
+  }
+
+}
